--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-coverage==6.2
-Django==4.0.1
-mock==4.0.3
+black==23.3.0
+coverage==7.2.3
+Django==4.2
+mock==5.0.1
 pyperclip==1.8.2
 pyserial==3.5
